--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Fredericka+the+Great&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <header>
@@ -45,7 +45,7 @@
     </section>
     <section class="gallery" id="#gallery">
         <div class="wrapper">
-            <h2>Some Of Our Friends</h2>
+            <h3>Some Of Our Friends</h3>
             <div>
                 <img src="./animal-land-assets/image-5.jpg">
                 <img src="./animal-land-assets/image-4.jpg">
