--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Fredericka+the+Great&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
+    <script src="https://kit.fontawesome.com/14cabc6321.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -30,6 +31,30 @@
                 </ul>
             </nav>
             <h1>Animal Refuge</h1>
+            <div class="social-icons">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram fa-solid fa-2xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook-f fa-solid fa-2xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-snapchat fa-solid fa-2xl"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-twitter fa-solid fa-2xl"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <section class="about" id="#about">
