finished about and added button styling

--- a/index.html
+++ b/index.html
@@ -60,21 +60,22 @@
     <section class="about" id="#about">
         <div class="wrapper">
             <div class="image-container">
-                <img src="./animal-land-assets/image-6.jpg">
+                <img src="../../Week-1/Assignment-1/assets/img/image-6.jpg">
             </div>
-            <div class="image-container">
+            <div class="text-container">
                 <h2>Suzie's Story</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam porro omnis velit quaerat dolore pariatur cupiditate unde voluptatem, praesentium commodi quia itaque, aut vitae! Cum ducimus nobis aliquid quidem consequuntur modi, perspiciatis beatae nostrum saepe optio voluptatibus praesentium ipsa aperiam animi perferendis similique a asperiores. Atque facere repellat perspiciatis!</p>
-            <div class="image-container">
+                <button>Read More</button>
+            </div>
         </div>
     </section>
     <section class="gallery" id="#gallery">
         <div class="wrapper">
             <h3>Some Of Our Friends</h3>
             <div>
-                <img src="./animal-land-assets/image-5.jpg">
-                <img src="./animal-land-assets/image-4.jpg">
-                <img src="./animal-land-assets/image-3.jpg">
+                <img src="../../Week-1/Assignment-1/assets/img/image-5.jpg">
+                <img src="../../Week-1/Assignment-1/assets/img/image-4.jpg">
+                <img src="../../Week-1/Assignment-1/assets/img/image-3.jpg">
             </div>
         </div>
     </section>
@@ -101,12 +102,12 @@
                     <button>Read More</button>
                 </div>
                 <div class="blog-image-container">
-                    <img src="./animal-land-assets/image-7.jpg">
+                    <img src="../../Week-1/Assignment-1/assets/img/image-7.jpg">
                 </div>
             </div>
             <div class="blog-container">
                 <div class="blog-image-container">
-                    <img src="./animal-land-assets/image-7.jpg">
+                    <img src="../../Week-1/Assignment-1/assets/img/image-7.jpg">
                 </div>
                 <div class="blog-text-container">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit inventore vel ipsa temporibus rerum, itaque quas recusandae nesciunt harum doloremque!</p>
