--- a/index.html
+++ b/index.html
@@ -71,11 +71,21 @@
     </section>
     <section class="gallery" id="#gallery">
         <div class="wrapper">
-            <h3>Some Of Our Friends</h3>
             <div>
-                <img src="../../Week-1/Assignment-1/assets/img/image-5.jpg">
-                <img src="../../Week-1/Assignment-1/assets/img/image-4.jpg">
-                <img src="../../Week-1/Assignment-1/assets/img/image-3.jpg">
+                <h3>Some Of Our Friends</h3>
+            </div>
+            <div class="gallery-container">
+                <ul>
+                    <li>
+                        <img src="../../Week-1/Assignment-1/assets/img/image-5.jpg">
+                    </li>
+                    <li>
+                        <img src="../../Week-1/Assignment-1/assets/img/image-4.jpg">
+                    </li>
+                    <li>
+                        <img src="../../Week-1/Assignment-1/assets/img/image-3.jpg">
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
