--- a/index.html
+++ b/index.html
@@ -147,10 +147,15 @@
             <div class="mailing-list">
                 <div class="cta-mailing">
                     <h4>Stay Updated</h4>
-                    <p>Subscrive to our newsletter to stay updated.</p>
                 </div>
                 <div class="form-mailing">
-                    <form></form>
+                    <form action="">
+                        <label for="email-address">
+                            <p>Subscribe to our newsletter to stay updated.</p>
+                        </label>
+                        <input type="text" id="email-address" name="email-address" placeholder="email address">
+                        <button>Subscribe</button>
+                    </form>
                 </div>
             </div>
             <div class="contact-info">
@@ -161,5 +166,10 @@
             </div>
         </div>
     </footer>
+    <div class="copyright">
+        <div class="wrapper">
+            <p>Copyright 2019 HackerYou</p>
+        </div>
+    </div>
 </body>
 </html>
