--- a/index.html
+++ b/index.html
@@ -93,18 +93,19 @@
         <div class="wrapper">
             <ul>
                 <li>
-                    <h3><a href="">Animal Spotlight</a></h3>
+                    <h4 class="animal-spotlight"><a href="">Animal Spotlight</a></h4>
                 </li>
                 <li>
-                    <h3><a href="">Events</a></h3>
+                    <h4><a href="">Events</a></h4>
                 </li>
                 <li>
-                    <h3><a href="">Merch</a></h3>
+                    <h4><a href="">Merch</a></h4>
                 </li>
             </ul>
         </div>
     </section>
-    <section class="blog" id="#blog">
+    <!-- Section INCOMPLETE -->
+    <!-- <section class="blog" id="#blog">
         <div class="wrapper">
             <div class="blog-container">
                 <div class="blog-text-container">
@@ -125,7 +126,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer class="contact" id="#contact">
         <div class="wrapper">
             <div class="footer-nav">
