worked on responsive and added alt image text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     </li>
                 </ul>
             </nav>
+            <div class="mobile-menu">
+                <i class="fa-solid fa-bars fa-2xl"></i>
+            </div>
             <h1>Animal Refuge</h1>
             <div class="social-icons">
                 <ul>
@@ -60,7 +63,7 @@
     <section class="about" id="#about">
         <div class="wrapper">
             <div class="image-container">
-                <img src="../../Week-1/Assignment-1/assets/img/image-6.jpg">
+                <img src="../../Week-1/Assignment-1/assets/img/image-6.jpg" alt="Cozy cat on a couch staring at you">
             </div>
             <div class="text-container">
                 <h2>Suzie's Story</h2>
@@ -77,13 +80,13 @@
             <div class="gallery-container">
                 <ul>
                     <li>
-                        <img src="../../Week-1/Assignment-1/assets/img/image-5.jpg">
+                        <img src="../../Week-1/Assignment-1/assets/img/image-5.jpg" alt="A bright green lizard hanging out on a branch">
                     </li>
                     <li>
-                        <img src="../../Week-1/Assignment-1/assets/img/image-4.jpg">
+                        <img src="../../Week-1/Assignment-1/assets/img/image-4.jpg" alt="Cute photo of a sheep starting at you with a flock of sheep in the background">
                     </li>
                     <li>
-                        <img src="../../Week-1/Assignment-1/assets/img/image-3.jpg">
+                        <img src="../../Week-1/Assignment-1/assets/img/image-3.jpg" alt="A blue and yellow parrot eating from its foot on a branch">
                     </li>
                 </ul>
             </div>
